Fix CAS-243: Chat toolbar gets hidden in sticky mode when using App Suite search
Root cause: Search takes full width and might overlaps sticky windows (in this case chat)
Solution: Apply a 'active-search' class such that the container for the sticky window can maintain the distance to the top

--- a/ui/apps/themes/components/find.less
+++ b/ui/apps/themes/components/find.less
@@ -182,3 +182,12 @@
         }
     }
 }
+
+#io-ox-windowmanager .io-ox-windowmanager-sticky-panel{
+    top: 0;
+}
+
+#io-ox-windowmanager.io-ox-find-active .io-ox-windowmanager-sticky-panel{
+    transition: top .2s;
+    top: 40px;
+}
